<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:checked="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_start"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_character"
        android:checked="false"
        android:icon="@drawable/alienbeige"
        android:title="@string/title_character"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_difficulty"
        android:checked="false"
        android:icon="@drawable/easy"
        android:title="@string/title_difficulty"
        app:showAsAction="ifRoom" />

</menu>
